FLY wire David/force-app/main/default/objects/OrderItem/fields/CPQ_Migrated_Record__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Migrated_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created from JIRA ticket: BOPI-307.</description>
    <label>CPQ Migrated Record</label>
    <type>Checkbox</type>
</CustomField>