FLY wire David/force-app/main/default/objects/OrderItem/fields/Estimated_Volume__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Volume__c</fullName>
    <description>Created for JIRA ticket: BOPI-10</description>
    <inlineHelpText>Total number of estimated usage based products</inlineHelpText>
    <label>Estimated Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>