FLY wire David/force-app/main/default/objects/OrderItem/fields/Implementation_Date__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Date__c</fullName>
    <description>This is the date that the (first) platform implementation is complete. To be populated by Looker.</description>
    <inlineHelpText>Date the (first) platform implementation for this Order Product is complete</inlineHelpText>
    <label>Implementation Date</label>
    <type>Date</type>
</CustomField>