FLY wire David/force-app/main/default/objects/OrderItem/fields/No_Charge_Transactions__c.field-meta.xml
<CustomField>
    <fullName>No_Charge_Transactions__c</fullName>
    <description>Created for JIRA ticket: BOPI-10</description>
    <inlineHelpText>Number of transactions that will not be charged to the customer</inlineHelpText>
    <label>No Charge Transactions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>