FLY wire David/force-app/main/default/objects/OrderItem/fields/NS_Billing_Price__c.field-meta.xml
<CustomField>
    <fullName>NS_Billing_Price__c</fullName>
    <description>Created from JIRA ticket: BOPI-356.</description>
    <formula>SBQQ__QuoteLine__r.NS_Billing_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NS Billing Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>