FLY wire David/force-app/main/default/objects/OrderItem/fields/NS_ID__c.field-meta.xml
<CustomField>
    <fullName>NS_ID__c</fullName>
    <description>JIRA ticket: BOPI-2</description>
    <inlineHelpText>NS Line Item Id, corresponds to this SF Subscription</inlineHelpText>
    <label>NS Line Item ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>