FLY wire David/force-app/main/default/objects/OrderItem/fields/NS_Next_Bill_Date__c.field-meta.xml
<CustomField>
    <fullName>NS_Next_Bill_Date__c</fullName>
    <formula>IF( ISPICKVAL(NS_Next_Bill_Type__c ,&quot;Contract execution&quot;),  Order.EffectiveDate , DATE(2099,12,31))</formula>
    <label>NS Next Bill Date</label>
    <type>Date</type>
</CustomField>