FLY wire David/force-app/main/default/objects/OrderItem/fields/NS_Sub_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>NS_Sub_Group_Id__c</fullName>
    <description>Concatenation of NS Subscription Group and NS ID (subscription). Used to by integration to sync SF and NS records for amendment and renewal. BOPI-480</description>
    <formula>TEXT(NS_Subscription_Group__c)  &amp; &quot;-&quot; &amp;   Order.Netsuite_ID__c</formula>
    <inlineHelpText>Concatenation of NS Subscription Group and NS ID (subscription)</inlineHelpText>
    <label>NS Sub Group Id</label>
    <type>Text</type>
</CustomField>