FLY wire David/force-app/main/default/objects/OrderItem/fields/NS_Subscription_Id__c.field-meta.xml
<CustomField>
    <fullName>NS_Subscription_Id__c</fullName>
    <description>Created for SALDEV-993, used for Workato ticket SALDEV-981</description>
    <inlineHelpText>NS Subscription (header) Id, it rolls up to the NS Sub Groups Combined field value on this Order.</inlineHelpText>
    <label>NS Subscription Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>