FLY wire David/force-app/main/default/objects/OrderItem/fields/NS_Usage_Rate__c.field-meta.xml
<CustomField>
    <fullName>NS_Usage_Rate__c</fullName>
    <formula>IF( NOT(ISBLANK(Adjusted_Rate_Percent__c)),  Adjusted_Rate_Percent__c ,
IF(NOT(ISBLANK( Adjusted_Rate_Amount__c )),  Adjusted_Rate_Amount__c ,
IF(NOT(ISBLANK( Usage_Rate__c )), Usage_Rate__c,
 Usage_Rate_Amt__c )))</formula>
    <label>NS Usage Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>