FLY wire David/force-app/main/default/objects/OrderItem/fields/Order_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Product_Type__c</fullName>
    <description>Created from JIRA ticket: BOPI-103.</description>
    <formula>SBQQ__QuoteLine__r.Quote_Line_Type__c</formula>
    <label>Order Product Type</label>
    <type>Text</type>
</CustomField>