FLY wire David/force-app/main/default/objects/OrderItem/fields/Payer__c.field-meta.xml
<CustomField>
    <fullName>Payer__c</fullName>
    <description>BOPI-337, set on quote line, may be edited by users during quoting for certain products</description>
    <inlineHelpText>Who will pay for this product or service</inlineHelpText>
    <label>Payer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payer</valueSetName>
    </valueSet>
</CustomField>