FLY wire David/force-app/main/default/objects/OrderItem/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <description>Created from JIRA ticket: BOPI-7.</description>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_Method</valueSetName>
    </valueSet>
</CustomField>