FLY wire David/force-app/main/default/objects/OrderItem/fields/Platform_IDs__c.field-meta.xml
<CustomField>
    <fullName>Platform_IDs__c</fullName>
    <description>Concatenated string of platform id&apos;s for this Order Product, populated by Looker</description>
    <inlineHelpText>Platform ID(s) for this Order Product</inlineHelpText>
    <label>Platform IDs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>