FLY wire David/force-app/main/default/objects/OrderItem/fields/Rate_Details__c.field-meta.xml
<CustomField>
    <fullName>Rate_Details__c</fullName>
    <description>Created for BOPI-913</description>
    <label>Rate Details</label>
    <length>37689</length>
    <type>LongTextArea</type>
</CustomField>