FLY wire David/force-app/main/default/objects/OrderItem/fields/Regional_Availability__c.field-meta.xml
<CustomField>
    <fullName>Regional_Availability__c</fullName>
    <label>Regional Availability</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Regional_Availability</valueSetName>
    </valueSet>
</CustomField>