FLY wire David/force-app/main/default/objects/OrderItem/fields/Total_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Quantity__c</fullName>
    <description>Total Product Specific Quantity. BOPI-675</description>
    <formula>SBQQ__QuoteLine__r.SBQQ__Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Product Specific Quantity.</inlineHelpText>
    <label>Total Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>