FLY wire David/force-app/main/default/objects/OrderItem/fields/Transaction_Currency__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Currency__c</fullName>
    <description>Created for BOPI-666</description>
    <label>Transaction Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Transaction_Currencies</valueSetName>
    </valueSet>
</CustomField>